objects/LiveAgent_Missed_chats__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custmer_Name__c</fullName>
        <label>Custmer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Language__c</fullName>
        <label>Customer Language</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Request</label>
        <type>Checkbox</type>
    </fields>
    <label>LiveAgent Missed chats</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>LiveAgent_Missed_chats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveAgent Missed chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>